fix(record): adjustment entity and model
