# tsoa/routes.ts
@@ -56,8 +56,8 @@ const models: TsoaRoute.Models = {
             "type": {"ref":"RecordType","required":true},
             "pic": {"dataType":"string"},
             "title": {"dataType":"string","required":true},
-            "year": {"dataType":"double","required":true},
-            "resensi": {"dataType":"datetime","required":true},
+            "year": {"dataType":"datetime","required":true},
+            "resensi": {"dataType":"double","required":true},
             "file_path": {"dataType":"string"},
             "area": {"ref":"AreaEntity"},
             "area_id": {"dataType":"string"},
@@ -132,8 +132,8 @@ const models: TsoaRoute.Models = {
             "type": {"ref":"RecordType","required":true},
             "pic": {"dataType":"string"},
             "title": {"dataType":"string","required":true},
-            "year": {"dataType":"double","required":true},
-            "resensi": {"dataType":"datetime","required":true},
+            "year": {"dataType":"datetime","required":true},
+            "resensi": {"dataType":"double","required":true},
             "file_path": {"dataType":"string"},
             "area": {"ref":"AreaEntity"},
             "area_id": {"dataType":"string"},
